çıkış işlemi yapıldı

--- a/YurtYonetim-UI/yurt-yonetim/src/index.html
+++ b/YurtYonetim-UI/yurt-yonetim/src/index.html
@@ -34,7 +34,7 @@
   <div class="wrapper">
     <in-root></in-root>
   </div>
-
+  <script SameSite=None Secure src="https://kit.fontawesome.com/2a7363af1f.js" crossorigin="anonymous"></script>
   <!-- jQuery -->
   <script src="assets/plugins/jquery/jquery.min.js"></script>
   <!-- jQuery UI 1.11.4 -->
