--- a/YurtYonetim-UI/yurt-yonetim/src/index.html
+++ b/YurtYonetim-UI/yurt-yonetim/src/index.html
@@ -14,7 +14,7 @@
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="assets/plugins/fontawesome-free/css/all.min.css">
-
+  <link rel="stylesheet" href="assets/plugins/jquery-ui/jquery-ui.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Tempusdominus Bootstrap 4 -->
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="assets/plugins/jsgrid/jsgrid.min.css">
   <link rel="stylesheet" href="assets/plugins/jsgrid/jsgrid-theme.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="assets/css/adminlte.min.css">
+  <link rel="stylesheet" href="assets/css/adminlte.css">
   <!-- overlayScrollbars -->
   <link rel="stylesheet" href="assets/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
   <!-- Daterange picker -->
@@ -46,11 +46,15 @@
   <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 
 <script src="assets/plugins/jquery/jquery.min.js"></script>
+<script src="assets/plugins/jquery-ui/jquery-ui.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src="assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- jsGrid -->
 <script src="assets/plugins/jsgrid/demos/db.js"></script>
 <script src="assets/plugins/jsgrid/jsgrid.min.js"></script>
+<!-- jquery-validation -->
+<script src="../../plugins/jquery-validation/jquery.validate.min.js"></script>
+<script src="../../plugins/jquery-validation/additional-methods.min.js"></script>
 </body>
 
 </html>
